# nimbus

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  MANIFEST.in  README.md  config.py  database.py  logging_config.py  main.py  nimbus.db  pyproject.toml  railway.toml  redis_client.py  requirements.txt  worker.py
backend/agent/: implementer.py  orchestrator.py  parallel_implementer.py  planner.py  reviewer.py  reviewer_external.py  verifier.py
backend/api/: ws.py
backend/api/routes/: admin.py  agents.py  analytics.py  auth.py  automations.py  continuous.py  health.py  ide.py  keys.py  linear.py  marketplace.py  pipelines.py  prism.py  repos.py  skills.py  slack.py  tasks.py
backend/benchmarks/swe_bench/: README.md  evaluator.py  harness.py  report.py
backend/cli/: architecture_induction.py  client.py  config.py  interactive.py  local_executor.py  main.py  model_router.py  pair.py  plugin_manager.py  renderer.py  sounds.py  tdd_executor.py  voice.py  watcher.py
backend/github_app/: github.py  handlers.py  webhooks.py
backend/linear_app/: handlers.py  linear_app.py  webhooks.py
backend/mcp_server/: auth.py  server.py  tools.py
backend/models/: automation.py  continuous.py  file_index.py  health.py  ide_session.py  pipeline.py  schemas.py  skill.py  task.py  task_metrics.py  token_usage.py  user.py
backend/nimbus_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/nimbus_core/: chunker.py  config.py  embedding.py  memory.py  rag.py  vector_store.py
backend/prism/: parser.py
backend/services/: agent_library.py  auth.py  automation_engine.py  chunker.py  claude_code.py  confidence.py  continuous_engine.py  cost_estimator.py  embedding.py  fly_machines.py  health_scorer.py  llm_client.py  mcp_client.py  memory.py  pipeline_executor.py  rag.py  reaper.py  repo_config.py  review_rules.py  sandbox.py  skills.py  vector_store.py
backend/slack_app/: handlers.py  notifier.py  slack_app.py
backend/tests/: conftest.py
backend/tests/unit/: test_chunker.py  (+19 more)
backend/tools/: file_tools.py  git_tools.py  shell_tools.py
(+113 files in other folders)
